--- a/shop.html
+++ b/shop.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 
-  <!--Shop Items-->
+  <!--Shop Items--> <!--Items are empty because shopify trial expired.-->
   <div class="container-fluid padding">
     <div class="row justify-content-center padding">
       <div class="col-xs-2 col-sm-4 col-md-4 col-lg-2">
