--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- End of distributedproject Zendesk Widget script -->
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html"><img src="picture1.jpg" height="49" width="170"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
